Fix new errors